--- a/WebThuvien/WebThuvien.csproj
+++ b/WebThuvien/WebThuvien.csproj
@@ -45,10 +45,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -124,6 +134,19 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entity\CHITIETMUONTRASACH.cs" />
+    <Compile Include="Models\Entity\DOCGIA.cs" />
+    <Compile Include="Models\Entity\LINHVUC.cs" />
+    <Compile Include="Models\Entity\LOAISACH.cs" />
+    <Compile Include="Models\Entity\LOAITAIKHOAN.cs" />
+    <Compile Include="Models\Entity\MUONTRASACH.cs" />
+    <Compile Include="Models\Entity\NHANVIEN.cs" />
+    <Compile Include="Models\Entity\NHAXUATBAN.cs" />
+    <Compile Include="Models\Entity\QLTHUVIEN.cs" />
+    <Compile Include="Models\Entity\SACH.cs" />
+    <Compile Include="Models\Entity\TACGIA.cs" />
+    <Compile Include="Models\Entity\TAIKHOAN.cs" />
+    <Compile Include="Models\Entity\THETHUVIEN.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -159,13 +182,10 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
