--- a/WebThuvien/WebThuvien.csproj
+++ b/WebThuvien/WebThuvien.csproj
@@ -459,6 +459,8 @@
     <Content Include="Views\Admin\Sach.cshtml" />
     <Content Include="Views\Admin\XemChiTietSach.cshtml" />
     <Content Include="Views\Admin\ThongKe1.cshtml" />
+    <Content Include="Views\Admin\UploadSach.cshtml" />
+    <Content Include="Views\Admin\MuonSach.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
