--- a/WebThuvien/bin/WebThuvien.dll.config
+++ b/WebThuvien/bin/WebThuvien.dll.config
@@ -16,7 +16,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="1048576" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
