--- a/WebThuvien/WebThuvien.csproj
+++ b/WebThuvien/WebThuvien.csproj
@@ -469,6 +469,11 @@
     <Content Include="Views\Admin\MuonSach.cshtml" />
     <Content Include="Views\Admin\Timkiemsach.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Admin\DSTacgia.cshtml" />
+    <Content Include="Views\Admin\DSLinhvuc.cshtml" />
+    <Content Include="Views\Admin\DSLoaisach.cshtml" />
+    <Content Include="Views\Admin\DSNXB.cshtml" />
+    <Content Include="Views\Admin\TraSach.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
