--- a/WebThuvien/bin/WebThuvien.dll.config
+++ b/WebThuvien/bin/WebThuvien.dll.config
@@ -17,6 +17,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" maxRequestLength="1048576" />
+    <sessionState mode="InProc" timeout="350" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -64,5 +65,5 @@
   </entityFramework>
   <connectionStrings>
   <!--<add name="QLTHUVIEN" connectionString="data source=DESKTOP-5QFPTSH\SQLEXPRESS;initial catalog=QLTHUVIEN;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />-->
-  <add name="QLTHUVIEN" connectionString="data source=DESKTOP-5QFPTSH\SQLEXPRESS;initial catalog=QLTHUVIEN;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+<add name="QLTHUVIEN" connectionString="data source=DESKTOP-5QFPTSH\SQLEXPRESS;initial catalog=QLTHUVIEN;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
