--- a/WebThuvien/WebThuvien.csproj
+++ b/WebThuvien/WebThuvien.csproj
@@ -120,6 +120,14 @@
       <Private>True</Private>
       <HintPath>packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="Xceed.Document.NET, Version=1.7.0.0, Culture=neutral, PublicKeyToken=3e4669d2f30244f4, processorArchitecture=MSIL">
+      <HintPath>packages\DocX.1.7.1\lib\net40\Xceed.Document.NET.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Xceed.Words.NET, Version=1.7.0.0, Culture=neutral, PublicKeyToken=3e4669d2f30244f4, processorArchitecture=MSIL">
+      <HintPath>packages\DocX.1.7.1\lib\net40\Xceed.Words.NET.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Zen.Barcode.Core, Version=3.1.0.0, Culture=neutral, PublicKeyToken=b5ae55aa76d2d9de, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Job Project\Web Thư viện điện tử\Zen.Barcode.Core_\Zen.Barcode.Core.dll</HintPath>
@@ -347,6 +355,7 @@
     <Content Include="Content\DataTables\css\mixins.scss" />
     <Content Include="Content\DataTables\css\common.scss" />
     <Content Include="Content\ClientContent\FILE_PDF\SACH1.pdf" />
+    <Content Include="Content\AdminContent\Mauthe\Thethuvien.docx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
@@ -474,6 +483,8 @@
     <Content Include="Views\Admin\DSLoaisach.cshtml" />
     <Content Include="Views\Admin\DSNXB.cshtml" />
     <Content Include="Views\Admin\TraSach.cshtml" />
+    <Content Include="Views\Admin\Taikhoan.cshtml" />
+    <Content Include="Views\Admin\ThemThe.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -484,6 +495,7 @@
     <Folder Include="Content\ClientContent\fonts\" />
     <Folder Include="Content\ClientContent\images\Books\" />
     <Folder Include="Content\ClientContent\js\" />
+    <Folder Include="Content\ClientContent\Thethuvien\" />
     <Folder Include="Views\Account\" />
   </ItemGroup>
   <ItemGroup>
