--- a/WebThuvien/packages.config
+++ b/WebThuvien/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.4.1" targetFramework="net45" />
+  <package id="DocX" version="1.7.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="3.4.1" targetFramework="net45" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net45" />
