--- a/WebThuvien/Web.config
+++ b/WebThuvien/Web.config
@@ -17,7 +17,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" maxRequestLength="1048576" />
-    <sessionState mode="InProc" timeout="350" />
+    <sessionState timeout="120" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
