--- a/WebThuvien/Web.config
+++ b/WebThuvien/Web.config
@@ -65,5 +65,5 @@
   </entityFramework>
   <connectionStrings>
   <!--<add name="QLTHUVIEN" connectionString="data source=DESKTOP-5QFPTSH\SQLEXPRESS;initial catalog=QLTHUVIEN;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />-->
-<add name="QLTHUVIEN" connectionString="data source=DESKTOP-5QFPTSH\SQLEXPRESS;initial catalog=QLTHUVIEN;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+<add name="QLTHUVIEN" connectionString="data source=DESKTOP-UI49JMC\SQLEXPRESS;initial catalog=QLTHUVIEN;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
