chỉnh sửa lại trang chủ
đồng thời chỉnh sửa lại time hiển thị của trang hoạt động, phân trang trang hoạt động

--- a/WebThuvien/Web.config
+++ b/WebThuvien/Web.config
@@ -64,7 +64,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-  <!--<add name="QLTHUVIEN" connectionString="data source=DESKTOP-5QFPTSH\SQLEXPRESS;initial catalog=QLTHUVIEN;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />-->
-<!--<add name="QLTHUVIEN" connectionString="data source=.\SQLEXPRESS;initial catalog=QLTHUVIEN;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-<add name="QLTHUVIEN" connectionString="data source=.\SQLEXPRESS;initial catalog=QLTHUVIEN;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+<add name="QLTHUVIEN" connectionString="data source=DESKTOP-5QFPTSH\SQLEXPRESS;initial catalog=QLTHUVIEN;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
