--- a/WebThuvien/bin/WebThuvien.dll.config
+++ b/WebThuvien/bin/WebThuvien.dll.config
@@ -64,5 +64,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-<add name="QLTHUVIEN" connectionString="data source=DESKTOP-5QFPTSH\SQLEXPRESS;initial catalog=QLTHUVIEN;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+<add name="QLTHUVIEN" connectionString="data source=.\SQLEXPRESS;initial catalog=QLTHUVIEN;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
