--- a/WebThuvien/WebThuvien.csproj
+++ b/WebThuvien/WebThuvien.csproj
@@ -497,6 +497,7 @@
     <Content Include="Views\Hoatdong\Index.cshtml" />
     <Content Include="Views\Hoatdong\Chitiet.cshtml" />
     <Content Include="Views\Lienhe\Index.cshtml" />
+    <Content Include="Views\Admin\Sachxemnhieu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
